--- a/WebApi/Source.WebApi/appsettings.json
+++ b/WebApi/Source.WebApi/appsettings.json
@@ -1,6 +1,7 @@
 ﻿{
   "ConnectionStrings": {
-    "DefaultSqlConnection": "Server=(localdb)\\mssqllocaldb;Database=SourceDb;Trusted_Connection=True;MultipleActiveResultSets=true"
+    "DefaultSqlConnection": "Server=(localdb)\\mssqllocaldb;Database=SourceDb;Trusted_Connection=True;MultipleActiveResultSets=true",
+    "DefaultPostgresConnection": "Server=localhost;Port=5432;Database=postgres;User Id=postgres;Password=myPassword;"
   },
 
   "Logging": {
