--- a/DomainCore/Source.Domains/Source.Domains.csproj
+++ b/DomainCore/Source.Domains/Source.Domains.csproj
@@ -5,4 +5,8 @@
     <LangVersion>8</LangVersion>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="Microsoft.EntityFrameworkCore.Abstractions" Version="3.1.1" />
+  </ItemGroup>
+
 </Project>
