--- a/Infrastructure.EFCore/Source.DataServices.EFCore/Source.DataServices.EFCore.csproj
+++ b/Infrastructure.EFCore/Source.DataServices.EFCore/Source.DataServices.EFCore.csproj
@@ -11,4 +11,12 @@
     <ProjectReference Include="..\..\DomainCore\Source.Domains\Source.Domains.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Migrations" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="3.1.1" />
+  </ItemGroup>
+
 </Project>
