--- a/Domain.DomainServices/Domain.DomainServices.csproj
+++ b/Domain.DomainServices/Domain.DomainServices.csproj
@@ -1,12 +1,7 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
     <PropertyGroup>
         <TargetFramework>netcoreapp2.2</TargetFramework>
     </PropertyGroup>
-
-    <ItemGroup>
-      <ProjectReference Include="..\Core\Source.Core\Source.Core.csproj" />
-      <ProjectReference Include="..\DomainCore\Source.Domains\Source.Domains.csproj" />
-    </ItemGroup>
 
 </Project>
