--- a/Infrastructure.EFCore/Source.EFCore.Setup/Source.EFCore.Setup.csproj
+++ b/Infrastructure.EFCore/Source.EFCore.Setup/Source.EFCore.Setup.csproj
@@ -5,12 +5,20 @@
     <LangVersion>8</LangVersion>
   </PropertyGroup>
   <ItemGroup>
+    <PackageReference Include="AutoFixture" Version="4.6.0" />
     <PackageReference Include="Microsoft.AspNetCore.All" Version="2.0.9" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.InMemory" Version="2.0.3" />
     <PackageReference Include="Npgsql.EntityFrameworkCore.PostgreSQL" Version="3.1.1.2" />
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\..\Core\Source.Test.Core\Source.Test.Core.csproj" />
-    <ProjectReference Include="..\Source.DataServices.EFCore\Source.DataServices.EFCore.csproj" />
+    <Reference Include="Source.DataServices.EFCore">
+      <HintPath>..\Source.DataServices.EFCore\bin\Debug\netcoreapp2.2\Source.DataServices.EFCore.dll</HintPath>
+    </Reference>
+    <Reference Include="Source.Domains">
+      <HintPath>..\..\DomainCore\Source.Domains\bin\Debug\netcoreapp2.2\Source.Domains.dll</HintPath>
+    </Reference>
+    <Reference Include="Source.Test.Core">
+      <HintPath>..\..\Core\Source.Test.Core\bin\Debug\netcoreapp2.2\Source.Test.Core.dll</HintPath>
+    </Reference>
   </ItemGroup>
 </Project>
