--- a/WebApi/Source.WebApi/appsettings.json
+++ b/WebApi/Source.WebApi/appsettings.json
@@ -1,9 +1,8 @@
 ﻿{
   "ConnectionStrings": {
     "DefaultSqlConnection": "Server=(localdb)\\mssqllocaldb;Database=SourceDb;Trusted_Connection=True;MultipleActiveResultSets=true",
-    "DefaultPostgresConnection": "Host=localhost;Port=5432;Database=ALZ;User Id=postgres;Password=1234;"
+    "DefaultPostgresConnection": "Host=localhost;Port=5432;Database=ALZ;User Id=postgres;Password=mime2020#pass;"
   },
-
   "Logging": {
     "IncludeScopes": false,
     "LogLevel": {
