--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -10,7 +10,7 @@
             "request": "launch",
             "preLaunchTask": "build",
             // If you have changed target frameworks, make sure to update the program path.
-            "program": "${workspaceFolder}/WebApi/Source.WebApi/bin/Debug/netcoreapp2.0/Source.WebApi.dll",
+            "program": "${workspaceFolder}/WebApi/Source.WebApi/bin/Debug/netcoreapp2.2/Source.WebApi.dll",
             "args": [],
             "cwd": "${workspaceFolder}/WebApi/Source.WebApi",
             "stopAtEntry": false,
@@ -20,7 +20,8 @@
                 "pattern": "^\\s*Now listening on:\\s+(https?://\\S+)"                
             },
             "env": {
-                "ASPNETCORE_ENVIRONMENT": "Development"
+                "ASPNETCORE_ENVIRONMENT": "Development",
+                "ASPNETCORE_URLS": "http://localhost:5009"
             },
             "sourceFileMap": {
                 "/Views": "${workspaceFolder}/Views"
