--- a/Core/Source.Core/Source.Core.csproj
+++ b/Core/Source.Core/Source.Core.csproj
@@ -10,4 +10,8 @@
     <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="2.0.3" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\..\DomainCore\Source.Domains\Source.Domains.csproj" />
+  </ItemGroup>
+
 </Project>
