--- a/DomainCore/Source.Domains/Source.Domains.csproj
+++ b/DomainCore/Source.Domains/Source.Domains.csproj
@@ -5,4 +5,8 @@
     <LangVersion>8</LangVersion>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="Hellang.Middleware.ProblemDetails" Version="4.1.0" />
+  </ItemGroup>
+
 </Project>
