--- a/WebApi/Source.WebApi/Source.WebApi.csproj
+++ b/WebApi/Source.WebApi/Source.WebApi.csproj
@@ -21,6 +21,11 @@
     <DotNetCliToolReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Tools" Version="2.0.4" />
   </ItemGroup>
 
+  <PropertyGroup>
+    <GenerateDocumentationFile>true</GenerateDocumentationFile>
+    <NoWarn>$(NoWarn);1591</NoWarn>
+  </PropertyGroup>
+  
   <ItemGroup>
     <ProjectReference Include="..\..\Core\Source.Core\Source.Core.csproj" />
     <ProjectReference Include="..\..\Domain.DomainServices\Domain.DomainServices.csproj" />
