--- a/Core/Source.Core/Source.Core.csproj
+++ b/Core/Source.Core/Source.Core.csproj
@@ -8,6 +8,7 @@
   <ItemGroup>
     <PackageReference Include="Microsoft.AspNetCore.All" Version="2.0.9" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="2.0.3" />
+    <PackageReference Include="Serilog.Sinks.File" Version="5.0.0-dev-00864" />
   </ItemGroup>
 
   <ItemGroup>
