--- a/Core/Source.Core/Source.Core.csproj
+++ b/Core/Source.Core/Source.Core.csproj
@@ -13,6 +13,8 @@
 
   <ItemGroup>
     <ProjectReference Include="..\..\DomainCore\Source.Domains\Source.Domains.csproj" />
+    <ProjectReference Include="..\..\Source.PaginationServices\Source.PaginationServices.csproj" />
+    <ProjectReference Include="..\Source.Pagination\Source.Pagination.csproj" />
   </ItemGroup>
 
 </Project>
